2008-08-04  Tor Lillqvist  <tml@novell.com>

	Bug 544684 - Win64 issue, window handles are assumed to be 32-bit

	* configure.in: On Win64, define GDK_NATIVE_WINDOW_POINTER.

	* gdk/gdkconfig.h.win32: Ditto here.

2008-08-04  Tor Lillqvist  <tml@novell.com>

	* gtk/gtkstatusicon.c: Fix typo in Win32 and Quartz code:
	s/gtk_icon_icon_info_load_icon/gtk_icon_info_load_icon/ .

2008-08-04  Tor Lillqvist  <tml@novell.com>

	* configure.in: Don't bother with the test "if gio can sniff png"
	if $gio_can_sniff has been already set. Preset it to "no" for
	Win32. This helps cross-compilation from 32-bit Windows to
	64-bit. No idea how this should be handled for cross-compilation
	in general.

2008-08-04  Tor Lillqvist  <tml@novell.com>

	* gdk/win32/gdkdisplay-win32.c: Don't bother looking up
	EnumDisplayMonitors and GetMonitorInfoA dynamically, they are
	present in NT-based Windows since Windows 2000.
	(enum_monitor): For some reason the MONITORINFOEX struct in
	mingw-win64 is different than the proper one as in MSDN and 32-bit
	mingw, so just copy the proper definition here.

2008-08-03  Björn Lindqvist  <bjourne@gmail.com>

	Bug 540379 – gtk_tree_view_enable_model_drag_dest and
	gtk_tree_view_enable_model_drag_source unsets reorderable property

	* gtk/gtktreeview.c: Improve docstrings regarding reorderable
	property.

2008-08-03  Matthias Clasen  <mclasen@redhat.com>

	* gdk/x11/gdkapplaunchcontext-x11.c: Support GEmblemedIcon.

2008-08-03  Matthias Clasen  <mclasen@redhat.com>

	Bug 546128 – Weirz string

	* gtk/gtksettings.c: Add a translator hint.
	Requested by Ignacio Casal Quinteiro

2008-08-02  Tor Lillqvist  <tml@novell.com>

	Bug 538686 - gtkprintoperation-win32.c: devmode_from_settings

	* gtk/gtkprintoperation-win32.c (devmode_from_settings): Plug
	potential leak. Thanks to Morten Welinder.

2008-08-02  Tor Lillqvist  <tml@novell.com>

	* gtk/gtkprint-win32.c
	* gtk/gtkprint-win32.h
	* gtk/gtkprintoperation-win32.c: Cosmetic fixups after patch
	below.
